Create Berkshire HTML and add reflection in head

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -1,9 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Example</title>
+  <title>Berkshire Hathaway Inc.</title>
+  <!-- 
+    - What was it like to translate your previous learning with HTML into an actual site?
+        It was great to finally start coding with HTML. I really liked this challenge as it 
+        ensured that we knew all of the different types of HTML tags and formatting.
+    - How was it researching and using semantic HTML5 elements?
+        I knew quite a few of them but it was nice to be able to put it to practice. It is 
+        interesting how many tags involve styling, such as <center>, <small>, etc. in HTML5, whereas 
+        Google will typically penalize your website's SEO if you use styling in your HTML.
+    - How did you do at keeping to best practices (i.e. no formatting in the HTML)
+        Fairly good in that we did not use style="CSS" ever in our HTML but rather just used 
+        HTML tags that have styling already, such as the <center> and <small> tags.
+    - What seems good and bad about HTML?
+        HTML seems great for structuring your webpage, but it is a bit lacking in terms of design customization. 
+        It should provide the skeleton for your website, but languages like CSS, JavaScript, and jQuery will be 
+        better for UI.
+    - What tricks do you have for remembering how to write HTML?
+        Whenver you open a tag, remember to close it immediately even if you have not 
+        already written content inside of it yet.
+  -->
 </head>
 <body>
-  Example content.
+  <nav>
+    <center>
+      <h1>BERKSHIRE HATHAWAY INC.</h1>
+      <small>3555 Farnam Street Omaha, NE 68131</small>
+      <p>Official Home Page</p>
+    </center>
+  </nav>
+  <hr/>
+  <main>
+    <ul>
+      <li><a href="#">A Message From Warren E. Buffett</a></li>
+      <li><a href="#">News Releases</a> <small> Updated February 16, 2016</small></li>
+      <li><a href="#">Annual & Interim Reports</a> <small>Updated November 6, 2015</small></li>
+      <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a> <small>Updated February 28, 2015</small></li>
+      <li><a href="#">Special Letters From Warren & Charlie RE:Past, Present and Future</a></li>
+      <li> <a href="#">Charlie Munger's Letters to Wesco Shareholders</a></li>
+      <li><a href="#">Link to SEC Filings</a></li>
+      <li><a href="#">Annual Meeting Information</a></li>
+      <li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
+      <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a> <small>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</small></li>
+      <li><a href="#">Corporate Governance</a></li>
+      <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a></li>
+      <li><a href="#">Owner's Manual</a></li>
+      <li><a href="#">Berkshire Activewear</a></li>
+      <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a></li>
+    </ul>
+    <hr/>
+    <center>
+      <a href="#"><img src="../week-2/imgs/geico.gif" /></a>
+      <br>
+      <small>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="#">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</small>
+    </center>
+    <hr/>
+    <p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="#">berkshire@berkshirehathaway.com</a>. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
+  </main>
+  <footer>
+    <hr/>
+    <h3><a href="#">Legal Disclaimer</a></h3>
+    <small>Copyright &copy; 1978-2016 Berkshire Hathaway Inc.</small>
+  </footer>
 </body>
 </html>
