Add geico image to html

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -51,7 +51,7 @@
     </ul>
     <hr/>
     <center>
-      <a href="#"><img src="../week-2/imgs/geico.gif" /></a>
+      <a href="#"><img src="../week-2/imgs/geicoimg.gif" /></a>
       <br>
       <small>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="#">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</small>
     </center>
